name:           yi-config
version:        0.17.1
synopsis:       Yi editor config of Noughtmare
category:       Yi
homepage:       https://github.com/noughtmare/yi-config#readme
bug-reports:    https://github.com/noughtmare/yi-config/issues
maintainer:     noughtmare@openmailbox.org
license:        GPL-2
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/noughtmare/yi-config

executable yi
  main-is: Main.hs
  other-modules:
      Paths_yi_config
  hs-source-dirs:
      ./.
  ghc-options: -Wall -ferror-spans -threaded
  build-depends:
      attoparsec
    , base >=4.8 && <5
    , microlens-platform >=0.3.4.0
    , mtl >=2.2.1
    , optparse-applicative >=0.13.0.0
    , text
    , yi-core >=0.17.1
    , yi-frontend-vty >=0.17.1
    , yi-keymap-vim >=0.17.1
    , yi-misc-modes >=0.17.1
    , yi-mode-haskell >=0.17.1
    , yi-mode-javascript >=0.17.1
    , yi-rope >=0.9
  default-language: Haskell2010
